--- a/HermesWeb/app/views/partial/loading.html
+++ b/HermesWeb/app/views/partial/loading.html
@@ -1,22 +1,20 @@
-﻿<div>
-    <div class="loading-anim">
-        <div class="square square--main">
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-            <div class="square square--mini"></div>
-        </div>
+﻿<div class="loading-anim">
+    <div class="square square--main">
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
+        <div class="square square--mini"></div>
     </div>
 </div>
