--- a/HermesWeb/app/css/site.css
+++ b/HermesWeb/app/css/site.css
@@ -517,6 +517,18 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
     color: #ECBF1E;
 }
 
+    #destiny-news .widget-background {
+        display: block;
+        position: absolute;
+        top: 7%;
+        left: 5%;
+        height: 100%;
+        width: 100%;
+        opacity: 0.3;
+        background-image: url(../images/game039.png);
+        background-repeat: no-repeat;
+    }
+
     #destiny-news .widget-title {
         padding: 0 10px;
         margin-bottom: 15px;
@@ -539,7 +551,7 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
 
     #destiny-news ul {
         padding: 0;
-        margin: 0 10px 10px 10px;
+        margin: 0 20px 10px 10px;
         list-style-type: none;
     }
 
@@ -549,7 +561,8 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
         animation-duration: .8s;
         opacity: 0;
         position: relative;
-        background: rgba(0, 0, 0, 0.1);
+        background: rgba(0, 0, 0, 0.5);
+        overflow: hidden;
         padding: 5px;
         padding-left: 20px;
         padding-right: 20px;
@@ -557,6 +570,7 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
         transition: visibility 2.4s ease-out, opacity 2.4s linear;
     }
 
+        /*li Entrance Delay*/
         #destiny-news li:nth-of-type(2) {
             animation-delay: 0.3s;
         }
@@ -625,11 +639,30 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
             height: 100%;
         }
 
+        #destiny-news li img {
+            -webkit-mask-image: -moz-linear-gradient(right, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
+            -webkit-mask-image: -webkit-linear-gradient(right, rgba(255,255,255,1) 30%,rgba(255,255,255,0) 100%);
+            -webkit-mask-image: linear-gradient(to left, rgba(255,255,255,1) 30%,rgba(255,255,255,0) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 );
+            position: absolute;
+            top: -40%;
+            left: 10%;
+            width: 100%;
+            z-index: -3;
+            -webkit-animation: fadeIn 2s; /* Safari, Chrome and Opera > 12.1 */
+            -moz-animation: fadeIn 2s; /* Firefox < 16 */
+            -ms-animation: fadeIn 2s; /* Internet Explorer */
+            -o-animation: fadeIn 2s; /* Opera < 12.1 */
+            animation: fadeIn 2s;
+        }
+
 /*****Footer*****/
 /*Define all elements in the footer*/
 
 /*****Etc*****/
 /*Continue to define the other sections one by one*/
+
+/*Fonts*/
 @font-face {
     font-family: 'Futura-T-OT-Book_19064';
     src: url('../fonts/Futura-T-OT-Book_19064.ttf') format('truetype');
@@ -645,6 +678,7 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
     src: url('../fonts/EpocaPro-Medium.otf') format('opentype');
 }
 
+/*fadeIn Animation*/
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -655,9 +689,46 @@ Yes, these may not be as semantic as we would all like, but they are necessary f
     }
 }
 
-.fade-in {
-    opacity: 0; /* make things invisible upon start */
-    animation: fadeIn ease-out 3s;
-    animation-fill-mode: forwards;
-    animation-duration: .8s;
+/* Firefox < 16 */
+@-moz-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
