Minor formatting changes

--- a/HermesWeb/app/views/dashboard.html
+++ b/HermesWeb/app/views/dashboard.html
@@ -16,7 +16,7 @@
 
                 <div class="row">
                     <div id="serverload" class="widget">
-                        <div class="widget-loading" ng-include="'app/views/partial/widgetloading.html'"></div>
+                        <!--<div class="widget-loading" ng-include="'app/views/partial/widgetloading.html'"></div>-->
                         <div class="widget-background"></div>
                         <div class="widget-title">
                             <h3>Hardware Statistics</h3>
@@ -29,7 +29,7 @@
 
                 <div class="row">
                     <div id="" class="widget">
-                        <div class="widget-loading" ng-include="'app/views/partial/widgetloading.html'"></div>
+                        <!--<div class="widget-loading" ng-include="'app/views/partial/widgetloading.html'"></div>-->
                         <div class="widget-background"></div>
                         <div class="widget-title">
                             <h3>Title</h3>
